force-app/main/default/objects/User/fields/Admin_Account__c.field-meta.xml
<CustomField>
    <fullName>Admin_Account__c</fullName>
    <formula>Contact.Account.Admin_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Account</label>
    <type>Checkbox</type>
</CustomField>