force-app/main/default/objects/User/fields/Has_LoggedIn_More_Than_Once__c.field-meta.xml
<CustomField>
    <fullName>Has_LoggedIn_More_Than_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has LoggedIn More Than Once</label>
    <type>Checkbox</type>
</CustomField>