force-app/main/default/objects/User/fields/Remove_Admin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Remove_Admin_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Admin Profile</label>
    <type>Checkbox</type>
</CustomField>