force-app/main/default/objects/User/fields/SAML_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SAML_External_Id__c</fullName>
    <formula>CASESAFEID(ContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAML_External_Id</label>
    <type>Text</type>
</CustomField>