force-app/main/default/objects/User/fields/Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer__c</fullName>
    <description>Check if user has a stripe customer Id in their account</description>
    <formula>NOT(ISBLANK(Contact.Account.StripeCustomerId__c))</formula>
    <label>Stripe Customer</label>
    <type>Checkbox</type>
</CustomField>