force-app/main/default/objects/User/fields/SX_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>SX_Activation_Date__c</fullName>
    <label>SX Activation Date</label>
    <type>Date</type>
</CustomField>