force-app/main/default/objects/User/fields/SX_LMS_User__c.field-meta.xml
<CustomField>
    <fullName>SX_LMS_User__c</fullName>
    <label>SX LMS User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>