force-app/main/default/objects/User/fields/SX_User_ID__c.field-meta.xml
<CustomField>
    <fullName>SX_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>SX User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>